# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  README.md  deployment-plan.md  vercel.json
.github/workflows/: deploy.yml
.qwen/commands/: sp.clarify.toml  sp.constitution.toml  sp.implement.toml  sp.plan.toml  sp.specify.toml  sp.tasks.toml
.specify/memory/: constitution.md
.specify/scripts/powershell/: create-new-feature.ps1
backend/: .env.example  pyproject.toml
backend/src/: main.py
backend/src/api/: __init__.py  chapter_routes.py  chatbot_routes.py  session_routes.py
backend/src/models/: api_models.py  base_models.py
backend/src/services/: chapter_service.py  embedding_service.py  llm_service.py  query_service.py  rag_service.py  session_service.py
backend/src/utils/: logger.py
frontend/textbook-website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  vercel.json
frontend/textbook-website/docs/: 1-introduction-to-physical-ai.md  2-basics-of-humanoid-robotics.md  3-ros-2-fundamentals.md  4-digital-twin-simulation.md  5-vision-language-action-systems.md  6-capstone-simple-ai-robot-pipeline.md
history/prompts/constitution/: 1-create-physical-ai-constitution.constitution.prompt.md
history/prompts/textbook-generation/: 2-create-textbook-generation-spec.spec.prompt.md  3-clarify-textbook-generation-spec.spec.prompt.md  4-plan-textbook-generation-feature.plan.prompt.md  5-generate-tasks-textbook-feature.tasks.prompt.md  (+1 more)
specs/001-textbook-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+12 files in other folders)
