[tool.poetry]
name = "textbook-backend"
version = "0.1.0"
description = "Backend API for Physical AI & Humanoid Robotics textbook with RAG chatbot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"  # For Neon PostgreSQL
qdrant-client = "^1.7.0"
openai = "^1.3.5"
langchain = "^0.0.330"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "src.main:main"